[package]
name = "basic_dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-types = "0.3.0"
candid = "0.7.0"
serde = "1.0.126"
serde_derive = "1.0.126"
